<resources>
    <string name="app_name">ParentMind</string>
    <string name="firebase_auth_google">firebaseAuthWithGoogle: %1$s</string>
    <string name="selamat_datang">Selamat Datang!</string>
    <string name="email">Email</string>
    <string name="silakan_login">Silakan Login</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="contoh_email_com">seseorang@email.com</string>
    <string name="logo_google">Logo Google</string>
    <string name="logo_facebook">Logo Facebook</string>
    <string name="logo_microsoft">Logo Microsoft</string>
    <string name="belum_memiliki_akun">Belum memiliki akun?</string>
    <string name="log_in">Log In</string>
    <string name="lupa_kata_sandi">Lupa kata sandi?</string>
    <string name="atau_anda_dapat_masuk_dengan">Atau Anda dapat masuk dengan</string>
    <string name="daftar_di_sini">Daftar di sini</string>
    <string name="kata_sandi_anda">Kata sandi Anda</string>
    <string name="input_valid_email_error">Masukkan email yang valid</string>
    <string name="tombol_kembali">tombol kembali</string>
    <string name="buat_akun_baru">buat akun baru</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user">nama</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="like">like</string>
    <string name="konsul">Konsul</string>
    <string name="cari">Cari</string>
    <string name="title_artikel">Judul Artikel</string>
    <string name="save">Simpan</string>
    <string name="skrip_artikel">Skrip artikel</string>
    <string name="show_artikel">Menampilkan artikel hasil pencarian Anda</string>
    <string name="artikel_populer">Artikel Populer</string>
    <string name="search">search</string>
    <string name="status_diskusi">Deskripsi Diskusi</string>
    <string name="name">name_use</string>
    <string name="nama_user">Nama Pengguna</string>
    <string name="time_upload">Waktu Upload</string>
    <string name="comment">Balasan</string>
    <string name="total_like">Like</string>
    <string name="forum">Forum</string>
    <string name="komunitas">Komunitas</string>
    <string name="title_video">Judul Video</string>
    <string name="skrip_vidio">Skrip Video</string>
    <string name="show_vidio">Menampilkan video hasil pencarian Anda</string>
    <string name="vidio_populer">Video Populer</string>
    <string name="search_forum">Cari pembahasan yang Anda inginkan</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="username">Username</string>
    <string name="masukkan_nama_lengkap_anda">Masukkan nama lengkap Anda</string>
    <string name="masukkan_username_anda">Masukkan username Anda</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="date_hint">01 Januari 2022</string>
    <string name="masukkan_kata_sandi_anda">Masukkan kata sandi Anda</string>
    <string name="konfirmasi_kata_sandi">Konfirmasi Kata Sandi</string>
    <string name="masukkan_kembali_kata_sandi_anda">Masukkan kembali kata sandi Anda</string>
    <string name="sudah_memiliki_akun">Sudah memiliki akun?</string>
    <string name="login_di_sini">Login di sini</string>
    <string name="sign_up">Sign Up</string>
    <string name="save_icon">Save icon</string>
    <string name="share_icon">Share icon</string>
    <string name="thumbnail_video">Thumbnail Video</string>
    <string name="detail_artikel">Detail Artikel</string>
    <string name="tombol_pengaturan">tombol pengaturan</string>
    <string name="buka">Buka</string>
    <string name="video_terbaru">Video Terbaru</string>
    <string name="artikel_dan_video">Artikel dan Video</string>
    <string name="mau_baca_artikel_atau_nonton_video">Mau baca artikel atau nonton video?</string>
    <string name="tonton_video_keren_disini">Tonton video keren disini!</string>
    <string name="mau_nonton">Mau nonton</string>
    <string name="baca_aja_deh">Baca aja deh</string>
    <string name="temukan_artikel_menarik_disini">Temukan artikel menarik disini!</string>
    <string name="ilustrasi_artikel">Ilustrasi artikel</string>
    <string name="ilustrasi_video">Ilustrasi video</string>
    <string name="background_icon_play_video">Background icon play video</string>
    <string name="tombol_favorite">tombol favorite</string>
    <string name="cari_video">Cari video</string>
    <string name="tombol_pencarian">tombol pencarian</string>
    <string name="artikel_terbaru">Artikel Terbaru</string>
    <string name="cari_artikel">Cari artikel</string>
    <string name="cari_artikel_atau_video">Cari artikel atau video</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="kategori">Kategori</string>
    <string name="_1_2_th">1-2 th</string>
    <string name="_3_4_th">3-4 th</string>
    <string name="_5_6_th">5-6 th</string>
    <string name="_7_12_th">7-12 th</string>
    <string name="_13_14_th">13-14 th</string>
    <string name="_17_21_th">17-21 th</string>
    <string name="jenis_media">Jenis Media</string>
    <string name="artikel">Artikel</string>
    <string name="video">Video</string>
    <string name="profil">Profil</string>
    <string name="tombol_edit">tombol edit</string>
    <string name="oops">Oops!</string>
    <string name="this_feature_is_under_development">This feature is under development</string>
    <string name="tombol_suka">tombol suka</string>
    <string name="judul_diskusi">Judul diskusi</string>
    <string name="val_article">article</string>
    <string name="val_video">video</string>
    <string name="val_laki_laki">laki-laki</string>
    <string name="val_perempuan">perempuan</string>
    <string name="val_1_2th">1-2th</string>
    <string name="val_3_4th">3-4th</string>
    <string name="val_5_th">5-6th</string>
    <string name="val_6_12th">6-12th</string>
    <string name="val_13_16th">13-16th</string>
    <string name="val_17_21th">17-21th</string>
    <string name="maaf_data_yang_anda_cari_tidak_ditemukan">Maaf data yang Anda cari tidak ditemukan!</string>
</resources>