<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.search.SearchActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?attr/colorPrimaryVariant"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true">

            <ImageView
                android:id="@+id/btn_back_toolbar"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:src="@drawable/left_arrow"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:tint="@color/white"
                android:contentDescription="@string/tombol_kembali" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="32dp"
                app:endIconMode="clear_text"
                app:hintEnabled="false"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_back_toolbar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_edit_text"
                    style="@style/body"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/cari_artikel_atau_video"
                    android:lines="1"
                    android:paddingTop="8dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/bg_input_search"/>
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <!--  Gender  -->

    <TextView
        android:id="@+id/tv_gender_label"
        style="@style/body.bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/jenis_kelamin"
        android:textColor="@color/blue"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.capstone.parentmind.view.custom_view.SearchOptionButton
        android:id="@+id/btn_boy"
        android:focusable="false"
        android:layout_width="104dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/cabin_medium"
        android:text="@string/laki_laki"
        app:layout_constraintTop_toBottomOf="@id/tv_gender_label"
        app:layout_constraintStart_toStartOf="@id/tv_gender_label"
        app:layout_constraintEnd_toStartOf="@id/btn_girl"/>

    <com.capstone.parentmind.view.custom_view.SearchOptionButton
        android:id="@+id/btn_girl"
        android:focusable="false"
        android:layout_width="104dp"
        android:layout_height="30dp"
        android:fontFamily="@font/cabin_medium"
        android:text="@string/perempuan"
        android:elevation="2dp"
        app:layout_constraintTop_toTopOf="@id/btn_boy"
        app:layout_constraintEnd_toEndOf="@id/tv_gender_label"
        app:layout_constraintStart_toEndOf="@id/btn_boy"/>

    <!--  Category  -->

    <TextView
        android:id="@+id/tv_category_label"
        style="@style/body.bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/kategori"
        android:textColor="@color/blue"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/btn_boy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.capstone.parentmind.view.custom_view.SearchOptionButton
        android:id="@+id/btn_1_2th"
        android:focusable="false"
        android:layout_width="68dp"
        android:layout_height="30dp"
        android:paddingTop="0dp"
        android:paddingBottom="1dp"
        android:layout_marginEnd="34dp"
        android:background="@drawable/bg_button_stroke"
        app:backgroundTint="@null"
        android:fontFamily="@font/cabin_medium"
        android:text="@string/_1_2_th"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="12sp"
        android:elevation="2dp"
        app:layout_constraintTop_toTopOf="@id/btn_3_4th"
        app:layout_constraintEnd_toStartOf="@id/btn_3_4th"/>

    <com.capstone.parentmind.view.custom_view.SearchOptionButton
        android:id="@+id/btn_3_4th"
        android:focusable="false"
        android:layout_width="68dp"
        android:layout_height="30dp"
        android:paddingTop="0dp"
        android:paddingBottom="1dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_button_stroke"
        app:backgroundTint="@null"
        android:fontFamily="@font/cabin_medium"
        android:text="@string/_3_4_th"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="12sp"
        android:elevation="2dp"
        app:layout_constraintTop_toBottomOf="@id/tv_category_label"
        app:layout_constraintStart_toStartOf="@id/tv_category_label"
        app:layout_constraintEnd_toEndOf="@id/tv_category_label"/>

    <com.capstone.parentmind.view.custom_view.SearchOptionButton
        android:id="@+id/btn_5_6th"
        android:focusable="false"
        android:layout_width="68dp"
        android:layout_height="30dp"
        android:paddingTop="0dp"
        android:paddingBottom="1dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:layout_marginStart="34dp"
        android:background="@drawable/bg_button_stroke"
        app:backgroundTint="@null"
        android:fontFamily="@font/cabin_medium"
        android:text="@string/_5_6_th"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="12sp"
        android:elevation="2dp"
        app:layout_constraintTop_toTopOf="@id/btn_3_4th"
        app:layout_constraintStart_toEndOf="@id/btn_3_4th"/>

    <com.capstone.parentmind.view.custom_view.SearchOptionButton
        android:id="@+id/btn_7_12th"
        android:focusable="false"
        android:layout_width="68dp"
        android:layout_height="30dp"
        android:paddingTop="0dp"
        android:paddingBottom="1dp"
        android:layout_marginEnd="34dp"
        android:background="@drawable/bg_button_stroke"
        app:backgroundTint="@null"
        android:fontFamily="@font/cabin_medium"
        android:text="@string/_7_12_th"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="12sp"
        android:elevation="2dp"
        app:layout_constraintTop_toTopOf="@id/btn_13_16th"
        app:layout_constraintEnd_toStartOf="@id/btn_3_4th"/>

    <com.capstone.parentmind.view.custom_view.SearchOptionButton
        android:id="@+id/btn_13_16th"
        android:focusable="false"
        android:layout_width="68dp"
        android:layout_height="30dp"
        android:paddingTop="0dp"
        android:paddingBottom="1dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_button_stroke"
        app:backgroundTint="@null"
        android:fontFamily="@font/cabin_medium"
        android:text="@string/_13_14_th"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="12sp"
        android:elevation="2dp"
        app:layout_constraintTop_toBottomOf="@id/btn_3_4th"
        app:layout_constraintStart_toStartOf="@id/tv_category_label"
        app:layout_constraintEnd_toEndOf="@id/tv_category_label"/>

    <com.capstone.parentmind.view.custom_view.SearchOptionButton
        android:id="@+id/btn_17_21th"
        android:focusable="false"
        android:layout_width="68dp"
        android:layout_height="30dp"
        android:paddingTop="0dp"
        android:paddingBottom="1dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:layout_marginStart="34dp"
        android:background="@drawable/bg_button_stroke"
        app:backgroundTint="@null"
        android:fontFamily="@font/cabin_medium"
        android:text="@string/_17_21_th"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="12sp"
        android:elevation="2dp"
        app:layout_constraintTop_toTopOf="@id/btn_13_16th"
        app:layout_constraintStart_toEndOf="@id/btn_13_16th"/>

    <!--  Type  -->

    <TextView
        android:id="@+id/tv_type_label"
        style="@style/body.bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/jenis_media"
        android:textColor="@color/blue"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/btn_13_16th"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.capstone.parentmind.view.custom_view.SearchOptionButton
        android:id="@+id/btn_article"
        android:focusable="false"
        android:layout_width="104dp"
        android:layout_height="30dp"
        android:paddingTop="0dp"
        android:paddingBottom="1dp"
        android:layout_marginTop="10dp"
        app:backgroundTint="@null"
        android:fontFamily="@font/cabin_medium"
        android:text="@string/artikel"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="12sp"
        android:elevation="2dp"
        app:layout_constraintTop_toBottomOf="@id/tv_type_label"
        app:layout_constraintStart_toStartOf="@id/tv_type_label"
        app:layout_constraintEnd_toStartOf="@id/btn_girl"/>

    <com.capstone.parentmind.view.custom_view.SearchOptionButton
        android:id="@+id/btn_video"
        android:focusable="false"
        android:layout_width="104dp"
        android:layout_height="30dp"
        android:paddingTop="0dp"
        android:paddingBottom="1dp"
        android:background="@drawable/bg_button_stroke"
        app:backgroundTint="@null"
        android:fontFamily="@font/cabin_medium"
        android:text="@string/video"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="12sp"
        android:elevation="2dp"
        app:layout_constraintTop_toTopOf="@id/btn_article"
        app:layout_constraintEnd_toEndOf="@id/tv_type_label"
        app:layout_constraintStart_toEndOf="@id/btn_article"/>

    <com.capstone.parentmind.view.custom_view.RoundedButton
        android:id="@+id/btn_search"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:enabled="false"
        android:text="@string/cari"
        android:fontFamily="@font/cabin_bold"
        app:layout_constraintTop_toBottomOf="@id/btn_article"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>